fix layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,6 @@
   flex-direction: column;
 }
 
-
-
 /* .App-header {
  
   align-items: center;
@@ -14,83 +12,71 @@
   font-size: calc(10px + 2vmin);
   color: white;
 } */
-.section-1{
+.section-1 {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 20px;
 }
-.row{
+.row {
   display: flex;
   text-align: center;
 }
-.popUp{
-  border:2px solid black;
-  display: flex;
-  flex-direction: column;
-  padding: 50px;
-  align-items: center;
-  justify-content: center;
-  width: auto;
-  height: 50vh;
-  position: absolute;
-  color: azure;
-  background-color: black;
-  border-radius: 20px;
-  text-align: center;
-  z-index: 2;
-}
-
-.btn{
-  width: 100px;
-  height: 100px;
-  border-bottom: 10px solid rgb(14, 2, 2);
+.popUp {
   display: grid;
   place-content: center;
-  font-size: xx-large;
-  font-weight: 900;
-
+  text-align: center;
+  color: grey;
+  max-width: 80vw;
+  height: 70vh;
 }
-.btn-center{
-  border-left:  10px solid black;
-}
-
-.players{
-  display:grid;
-  place-content: center;
-  /* border:2px solid black; */
-  /* margin: 10px; */
-  width: 70vw;
-  height: auto;
-}
-.player{
-  transition: all 0.5s;
-  border-radius: 10px;
-  padding: 10px;
-}
-.playerBoard{
-  
-  height: 70px;
-  width: 30vw;
+.playerBoard {
   display: flex;
   justify-content: space-between;
 }
-.go{
-  border: 2px solid green;
-  transform: scale(1.5);
+.mode-Image {
+  width: 100px;
+  height: 100px;
 }
-.wait{
-  border: 2px solid red;
+.btn {
+  width: 100px;
+  height: 100px;
+  border: 2px solid grey;
+  display: grid;
+  place-content: center;
+  font-size: 6rem;
+  font-weight: 400;
+}
+.btn-center {
+  border-left: 10px solid black;
 }
 
-p{
-  font-size: xx-large;
+.players {
+  display: flex;
+  justify-content: space-between;
+  /* border:2px solid black; */
+  /* margin: 10px; */
+
+  height: auto;
 }
-footer{
+.player {
+  transition: all 0.5s;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 5px;
+}
+
+.go {
+  border: 5px solid green;
+}
+.wait {
+  border: 5px solid red;
+}
+
+footer {
   margin-top: 50px;
 }
-a{
+a {
   font-size: x-small;
   font-weight: 100;
 }
-
